--- a/app/templates/page_flan.html
+++ b/app/templates/page_flan.html
@@ -37,8 +37,9 @@
                 {% endif %}
             </div>
         </div>
+
 {% from "macros.html" import afficher_grille_evaluations %}
-<h2 class="section-title">Les évaluations</h2>
+<h2 class="section-title">Les evaluations</h2>
 {{ afficher_grille_evaluations(flan.evaluations) }}
 
 
