--- a/app/templates/dashboard.html
+++ b/app/templates/dashboard.html
@@ -1,6 +1,5 @@
 {% extends "base.html" %}
 {% from "macros.html" import afficher_grille_evaluations %}
-
 {% block content %}
   <div class="container">
       <h1>Tableau de bord</h1>
@@ -57,18 +56,17 @@
               </div>
           </form>
       </div>
-
       <!-- Section des évaluations de l'utilisateur -->
       <div class="evaluations-section">
           <h2 class="evaluations-title">Mes evaluations</h2>
-          {{ afficher_grille_evaluations(current_user.evaluations) }}
-      </div>
+          {{ afficher_grille_evaluations(current_user.evaluations, current_user) }}
 
+      </div>
       <!-- Section des évaluations en attente pour les administrateurs -->
       {% if current_user.is_admin %}
       <div class="evaluations-section">
           <h2 class="evaluations-title">Évaluations en attente</h2>
-          {{ afficher_grille_evaluations(pending_evaluations) }}
+          {{ afficher_grille_evaluations(pending_evaluations, current_user) }}
       </div>
       {% endif %}
   </div>
