--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -7,6 +7,9 @@
     {% block scripts_head %}{% endblock %}
     <!-- Lien vers le fichier CSS -->
     <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}">
+    <!-- Lien vers les icones -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
+
 </head>
 <body>
     <header>
