Possibilité pour utilisateur de modifier évaluations,joli CSS

--- a/app/templates/macros.html
+++ b/app/templates/macros.html
@@ -146,15 +146,21 @@
                             {% endif %}
                         </div>
                         <p class="type">{{ evaluation.description }}</p>
-                        {% if current_user.is_admin %}
-                            <div class="action-buttons">
-                                <form method="POST" action="{{ url_for('main.valider_evaluation', id_eval=evaluation.id_eval) }}" style="display: inline-block;">
-                                    <button type="submit" class="btn btn-success">Valider</button>
-                                </form>
-                                <form method="POST" action="{{ url_for('main.supprimer_evaluation', id_eval=evaluation.id_eval) }}" style="display: inline-block;">
-                                    <button type="submit" class="btn btn-danger">Supprimer</button>
-                                </form>
-                            </div>
+{% if current_user.is_admin %}
+    <div class="action-buttons">
+        <form method="POST" action="{{ url_for('main.valider_evaluation', id_eval=evaluation.id_eval) }}" style="display: inline-block;">
+            <button type="submit" class="btn btn-success square-btn" title="Valider">
+                <i class="bi bi-check"></i>
+            </button>
+        </form>
+        <form method="POST" action="{{ url_for('main.supprimer_evaluation', id_eval=evaluation.id_eval) }}" style="display: inline-block;">
+            <button type="submit" class="btn btn-danger square-btn" title="Supprimer">
+                <i class="bi bi-trash"></i>
+            </button>
+        </form>
+    </div>
+
+
                         {% elif current_user.id_user == evaluation.id_user %}
 <div class="action-buttons d-flex gap-1">
     <form method="POST" action="{{ url_for('main.modifier_evaluation', id_eval=evaluation.id_eval) }}" style="display: inline-block;">
