L'admin peut modifier/supprimer ses propres évaluations

--- a/app/templates/macros.html
+++ b/app/templates/macros.html
@@ -146,22 +146,11 @@
                             {% endif %}
                         </div>
                         <p class="type">{{ evaluation.description }}</p>
-{% if current_user.is_admin %}
-    <div class="action-buttons">
-        <form method="POST" action="{{ url_for('main.valider_evaluation', id_eval=evaluation.id_eval) }}" style="display: inline-block;">
-            <button type="submit" class="btn btn-success square-btn" title="Valider">
-                <i class="bi bi-check"></i>
-            </button>
-        </form>
-        <form method="POST" action="{{ url_for('main.supprimer_evaluation', id_eval=evaluation.id_eval) }}" style="display: inline-block;">
-            <button type="submit" class="btn btn-danger square-btn" title="Supprimer">
-                <i class="bi bi-trash"></i>
-            </button>
-        </form>
-    </div>
 
 
-                        {% elif current_user.id_user == evaluation.id_user %}
+
+
+{% if current_user.id_user == evaluation.id_user %}
 <div class="action-buttons d-flex gap-1">
     <form method="POST" action="{{ url_for('main.modifier_evaluation', id_eval=evaluation.id_eval) }}" style="display: inline-block;">
         <button type="submit" class="btn btn-primary btn-sm square-btn" title="Modifier">
@@ -174,6 +163,20 @@
         </button>
     </form>
 </div>
+
+    {% elif current_user.is_admin %}
+    <div class="action-buttons">
+        <form method="POST" action="{{ url_for('main.valider_evaluation', id_eval=evaluation.id_eval) }}" style="display: inline-block;">
+            <button type="submit" class="btn btn-success square-btn" title="Valider">
+                <i class="bi bi-check"></i>
+            </button>
+        </form>
+        <form method="POST" action="{{ url_for('main.supprimer_evaluation', id_eval=evaluation.id_eval) }}" style="display: inline-block;">
+            <button type="submit" class="btn btn-danger square-btn" title="Supprimer">
+                <i class="bi bi-trash"></i>
+            </button>
+        </form>
+    </div>
 
 
                         {% endif %}
