--- a/app/templates/macros.html
+++ b/app/templates/macros.html
@@ -100,6 +100,8 @@
     {% endif %}
 {% endmacro %}
 
+
+<!-- Grille des évaluations -->
 {% macro afficher_grille_evaluations(evaluations, current_user) %}
     {% if not evaluations %}
         <div class="no-results">
@@ -111,7 +113,10 @@
                 <div class="carte">
                     <div class="card-content">
                         <div class="card-header">
-                            <h3>{{ evaluation.utilisateur.pseudo }}</h3>
+                            <h2>{{ evaluation.flan.etablissement.nom | enlever_accents }}</h2>
+                            <h3>{{ evaluation.flan.nom | enlever_accents }}</h3>
+
+
                             {{ afficher_badge_evaluation(evaluation) }}
                         </div>
                         <div class="evaluation-date-container">
@@ -146,8 +151,6 @@
                             {% endif %}
                         </div>
                         <p class="type">{{ evaluation.description }}</p>
-
-
 
 
 {% if current_user.id_user == evaluation.id_user %}
