--- a/app/templates/page_etablissement.html
+++ b/app/templates/page_etablissement.html
@@ -1,5 +1,12 @@
 {% extends "base.html" %}
 {% block content %}
+    {% if current_user.is_authenticated %}
+    <!-- Contenu pour les utilisateurs connectés DEBUG -->
+    <p>Bienvenue, {{ current_user.pseudo }}!</p>
+{% else %}
+    <p>Veuillez vous connecter pour voir ce contenu.</p>
+{% endif %}
+
 <div class="container">
     <!-- Détails de l'établissement -->
     <div class="etablissement-header">
@@ -17,7 +24,7 @@
     </div>
 
 {% from "macros.html" import afficher_grille_flans %}
-{{ afficher_grille_flans(etablissement.flans, etablissement.id_etab, current_user) }}
+{{ afficher_grille_flans(etablissement.flans, current_user, etablissement, form) }}
 
 
 
